--- a/陣列語法3.html
+++ b/陣列語法3.html
@@ -100,6 +100,10 @@
         const number5 = [33, 75, 69, 41, 50, 19]
         console.log(Math.max(...[33, 75, 69, 41, 50, 19]))  // 75
 
+        for (i = 0; i <= 200; i++) {
+            console.log(Math.round(Math.random() * 100))
+        }
+
 
     </script>
 </body>
